# ray-tracer-challenge

./: README.md
raytracerchallenge/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
raytracerchallenge/src/: raytracerchallenge.cpp  raytracerchallenge.h
raytracerchallenge/src/core/: canvas.cpp  canvas.h  color.cpp  color.h  constants.h  math_utils.h  matrix.cpp  matrix.h  tuple.cpp  tuple.h
raytracerchallenge/src/geometry/: intersection.cpp  intersection.h  ray.cpp  ray.h
raytracerchallenge/src/practice/: chapter1_projectile.cpp  chapter1_projectile.h  chapter3_matrices.cpp  chapter3_matrices.h  chapter4_analog.h  chapter5_rays.h
raytracerchallenge/src/shapes/: sphere.cpp  sphere.h
raytracerchallenge/tests/: tests.cpp
raytracerchallenge/tests/core/: canvas.tests.cpp  color.tests.cpp  matrix.tests.cpp  transformations.tests.cpp  tuple.tests.cpp
raytracerchallenge/tests/geometry/: ray.tests.cpp
